--- a/resume.html
+++ b/resume.html
@@ -110,7 +110,7 @@
 
   <footer>
   <hr>
-  <p><a href="index.html">Back to my portal</a><p>
+  <p><a href="index.html">Back to main page</a><p>
   </footer>
 
 </html>
