--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1>Alexey Osipov's Profile</h1>
     <h2>About Me</h2>
     <p>I am an experienced technical support engineer with excellent customer service skills</p>
-    <p>Worked mainly for the multicultural international companies and provided product support</p>
+    <p>Worked mainly for the multicultural international companies providing product support</p>
     <p>to partners and customers from over the world with different cultures.</p> 
     <p>Strong communication, analytical and problem-solving skills, passion to learn modern technologies.</p>
     
