--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@
 
 <html lang="en">
 
+<head>
+  <style type="text/css">
+
+    body.rus > p[lang=en] {
+        display: none;
+      }
+      body.en > p[lang=rus] {
+        display: none;      
+      }
+      body.rus > h1[lang=en] {
+        display: none;
+      }
+      body.en > h1[lang=rus] {
+        display: none;
+      }
+      body.rus > h2[lang=en] {
+        display: none;
+      }
+      body.en > h2[lang=rus] {
+        display: none;
+      }
+      body.rus > h3[lang=en] {
+        display: none;
+      }
+      body.en > h3[lang=rus] {
+        display: none;
+      }   
+    </style>
+  </head>
+
   <header>
     <title>Alexey Osipov's Profile</title>
     <meta charset="utf-8">
