--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
     <h2 lang="rus">Портфолио</h2>
 
 
-    <p lang="en"><a href="resume_eng.html">My Resume</a> | <a href="https://github.com/alosipov" target="_blank">My GitHub</a> | <a href="certs.html">Certification and courses</a></p>
-    <p lang="rus"><a href="resume_rus.html">Моё резюме</a> | <a href="https://github.com/alosipov" target="_blank">Ссылка на GitHub</a> | <a href="certs.html">Сертификаты и курсы</a></p>
+    <p lang="en"><a href="resume_eng.html" target="_blank">My Resume</a> | <a href="https://github.com/alosipov" target="_blank">My GitHub</a> | <a href="certs.html" target="_blank">Certification and courses</a></p>
+    <p lang="rus"><a href="resume_rus.html" target="_blank">Моё резюме</a> | <a href="https://github.com/alosipov" target="_blank">Ссылка на GitHub</a> | <a href="certs.html" target="_blank">Сертификаты и курсы</a></p>
     <h2 lang="en">Contact</h2>
     <h2 lang="rus">Контакты</h2>
 
