--- a/index.html
+++ b/index.html
@@ -3,6 +3,36 @@
 <!-- this is a comment for human! -->
 
 <html lang="en">
+  
+  <head>
+  <style type="text/css">
+
+    body.rus > p[lang=en] {
+        display: none;
+      }
+      body.en > p[lang=rus] {
+        display: none;      
+      }
+      body.rus > h1[lang=en] {
+        display: none;
+      }
+      body.en > h1[lang=rus] {
+        display: none;
+      }
+      body.rus > h2[lang=en] {
+        display: none;
+      }
+      body.en > h2[lang=rus] {
+        display: none;
+      }
+      body.rus > h3[lang=en] {
+        display: none;
+      }
+      body.en > h3[lang=rus] {
+        display: none;
+      }   
+    </style>
+  </head>
 
   <header>
     <title>Alexey Osipov's Profile</title>
