--- a/certs.html
+++ b/certs.html
@@ -3,6 +3,18 @@
 <!-- this is a comment for human! -->
 
 <html lang="en">
+  
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168200257-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-168200257-1');
+    </script>
+  </head>
 
   <header>
     <title>Courses and certification</title>
