--- a/certs.html
+++ b/certs.html
@@ -37,7 +37,7 @@
 
     <h3>2020:</h3>
       <ul>        
-        <li><a href="https://www.efset.org/cert/tWCGPz"><p>EF SET English Certificate 70/100 (C1 Advanced)</p></a></li>
+        <li><a href="https://www.efset.org/cert/tWCGPz" style="color:black;" target="_blank" text-decoration="underline"><p>EF SET English Certificate 70/100 (C1 Advanced)</p></a></li>
         <li>Crash Course on Python from Google on Coursera</li>
         <li>Coursera: "Математика и Python для анализа данных" от университета Московский физико-технический институт, Yandex & E-Learning Development Fund</li>
         <li>Cleverics: Grab@Pizza — ИТ и основной бизнес (Business IT Alignment in Action)</li>
