--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <h2 lang="rus">Портфолио</h2>
 
 
-    <p lang="en" align="center"><a href="https://github.com/alosipov" target="_blank">My GitHub</a> | <a href="resume_eng.html" target="_blank">&nbsp;&nbsp;CV&nbsp;&nbsp;</a> | <a href="certs.html" target="_blank"> Certification and courses</a></p>
+    <p lang="en"><a href="https://github.com/alosipov" target="_blank">My GitHub&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> | <a href="resume_eng.html" target="_blank"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CV&nbsp;&nbsp;&nbsp;&nbsp;</a> | <a href="certs.html" target="_blank"> Certification and courses</a></p>
     <p lang="rus"><a href="https://github.com/alosipov" target="_blank">Ссылка на GitHub</a> | <a href="resume_rus.html" target="_blank"> Моё резюме</a> | <a href="certs.html" target="_blank"> Сертификаты и курсы</a></p>
     <h2 lang="en">Contact</h2>
     <h2 lang="rus">Контакты</h2>
