--- a/resume_rus.html
+++ b/resume_rus.html
@@ -33,7 +33,7 @@
     </div>    
 
     <h1>Алексей Осипов</h1>
-    <h4>Ищу позицию QA Automation</h4>
+    <h4>Желаемая позиция: "Руководитель департамента поддержки"</h4>
 
     <p>Email: <a href="mailto:aleksey_osipov@mail.ru" target="_blank">aleksey_osipov@mail.ru</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/alosipov/" target="_blank">https://www.linkedin.com/in/alosipov/</a></p>
