--- a/resume_eng.html
+++ b/resume_eng.html
@@ -33,7 +33,7 @@
     </div>    
 
     <h1>Alexey Osipov</h1>
-    <h4>Looking for QA Automation position</h4>
+    <h4>Looking for a Support Manager position</h4>
 
     <p>Email: <a href="mailto:aleksey_osipov@mail.ru" target="_blank">aleksey_osipov@mail.ru</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/alosipov/" target="_blank">https://www.linkedin.com/in/alosipov/</a></p>
